[gd_scene load_steps=4 format=3 uid="uid://dgkav3th8sso0"]

[ext_resource type="Script" uid="uid://2t3vf4dg3lbx" path="res://Scenes/UI/card_copy_popup.gd" id="1_7iw53"]
[ext_resource type="PackedScene" uid="uid://bfaynmksjd00m" path="res://Scenes/UI/card_menu_ui.tscn" id="2_gwbu4"]
[ext_resource type="Texture2D" uid="uid://b52fyao0e0xj1" path="res://art/side_arrow_fade.png" id="3_gwbu4"]

[node name="CardCopyPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7iw53")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -302.0
offset_right = 402.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FocusCardContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CardTooltip" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/FocusCardContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/HBoxContainer/FocusCardContainer/CardTooltip" instance=ExtResource("2_gwbu4")]
layout_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/FocusCardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]Card Description[/center]

Bla blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah "
fit_content = true

[node name="ReplaceArrow" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
texture = ExtResource("3_gwbu4")
expand_mode = 1
stretch_mode = 5

[node name="ReplaceCardContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ReplaceCardTooltip" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ReplaceCardContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/HBoxContainer/ReplaceCardContainer/ReplaceCardTooltip" instance=ExtResource("2_gwbu4")]
layout_mode = 2

[node name="ReplaceCardDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/ReplaceCardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]Card Description[/center]

Bla blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah blah blah bla blah "
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="CopyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
size_flags_horizontal = 4
text = "Copy card"

[node name="ReplaceButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
size_flags_horizontal = 4
text = "Replace card"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ReplaceButton" to="." method="_on_replace_button_pressed"]
